sieht ganz gut aus :)

--- a/evoks/theme/templates/vocabulary_members.html
+++ b/evoks/theme/templates/vocabulary_members.html
@@ -39,24 +39,22 @@
                         <!-- Replace with your content -->
                         <div class="py-4">
                             <!-- This example requires Tailwind CSS v2.0+ -->
-                            <form action="#" method="post"> {% csrf_token %}
-                                <button type="submit" name="overview"
-                                    class="inline-flex items-center px-2.5 py-1.5 border border-gray-300 shadow-sm text-xs font-medium rounded text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
-                                    Overview
-                                </button>
-                                <button type="submit" name="terms"
-                                    class="inline-flex items-center px-2.5 py-1.5 border border-gray-300 shadow-sm text-xs font-medium rounded text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
-                                    Terms
-                                </button> 
-                                <button type="submit" name="members"
-                                    class="inline-flex items-center px-2.5 py-1.5 border border-gray-300 shadow-sm text-xs text-regal-blue font-medium rounded text-gray-700 bg-test focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
-                                    Members
-                                </button> 
-                                <button type="submit" name="settings"
-                                    class="inline-flex items-center px-2.5 py-1.5 border border-gray-300 shadow-sm text-xs font-medium rounded text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
-                                    Settings
-                                </button>
-                            </form>
+                            <a href='{% url 'vocabulary_overview' name=vocabulary.name %}'
+                                class="inline-flex items-center px-2.5 py-1.5 border border-gray-300 shadow-sm text-xs font-medium rounded text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
+                                Overview
+                            </a>
+                            <a href='{% url 'vocabulary_terms' name=vocabulary.name %}'
+                                class="inline-flex items-center px-2.5 py-1.5 border border-gray-300 shadow-sm text-xs font-medium rounded text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
+                                Terms
+                            </a> 
+                            <a href='{% url 'vocabulary_members' name=vocabulary.name %}'
+                                class="inline-flex items-center px-2.5 py-1.5 border border-gray-300 shadow-sm text-xs text-regal-blue font-medium rounded text-gray-700 bg-test focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
+                                Members
+                            </a> 
+                            <a href='{% url 'vocabulary_settings' name=vocabulary.name %}'
+                                class="inline-flex items-center px-2.5 py-1.5 border border-gray-300 shadow-sm text-xs font-medium rounded text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
+                                Settings
+                            </a>
                             <main>
 
                                 <div class="py-6">
@@ -93,7 +91,6 @@
                                                                 <tbody class="bg-white divide-y divide-gray-200">
                                                                     
                                                                     <tr>
-                                                                    {{ data|slice:"(page - 1) * 10:page * 10 - 1" }}
                                                                     {% for data in members %}
                                                                         <td class="px-6 py-4 whitespace-nowrap">
                                                                             <div class="flex items-center">
@@ -105,7 +102,7 @@
                                                                                 <div class="ml-4">
                                                                                     <div
                                                                                         class="text-sm font-medium text-gray-900">
-                                                                                        {{data.name}}<br/>
+                                                                                        {{data.user.username}}<br/>
                                                                                     </div>
                                                                                     <div class="text-sm text-gray-500">
                                                                                         {{data.user.email}}<br/>
@@ -146,23 +143,27 @@
                                                 <div class="hidden sm:block">
                                                     <p class="text-sm text-gray-700">
                                                         Showing
-                                                        <span class="font-medium">{{page|add:"-1"}}</span>
+                                                        <span class="font-medium">{{members.start_index}}</span>
                                                         to
-                                                        <span class="font-medium">{% widthratio page 1 10 %}</span>
+                                                        <span class="font-medium">{{members.end_index}}</span>
                                                         of
-                                                        <span class="font-medium">{{members|length}}</span>
+                                                        <span class="font-medium">{{members.paginator.count}}</span>
                                                         results
                                                     </p>
                                                 </div>
                                                 <div class="flex-1 flex justify-between sm:justify-end">
-                                                    <a href="#"
-                                                        class="relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
-                                                        Previous
-                                                    </a>
-                                                    <a href="#"
-                                                        class="ml-3 relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
-                                                        Next
-                                                    </a>
+                                                    {% if members.has_previous %}
+                                                        <a href="?page={{ members.previous_page_number }}"
+                                                            class="relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
+                                                            Previous
+                                                        </a>
+                                                    {% endif %}
+                                                    {% if members.has_next %}
+                                                        <a href="?page={{ members.next_page_number }}"
+                                                            class="ml-3 relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
+                                                            Next
+                                                        </a>
+                                                    {% endif %}
                                                 </div>
                                             </nav>
                                         </div>
