--- a/evoks/theme/templates/modals/create_vocabulary.html
+++ b/evoks/theme/templates/modals/create_vocabulary.html
@@ -29,7 +29,7 @@
                                         <div class="mt-1">
                                             <input type="text" name="name" id="text"
                                                 class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
-                                                placeholder="cooles_vokabular123">
+                                                placeholder="">
                                         </div>
                                     </div>
 
