--- a/evoks/theme/templates/login.html
+++ b/evoks/theme/templates/login.html
@@ -27,7 +27,7 @@
                     </a>
                 </p>
             </div>
-            <form class="mt-8 space-y-6" action="#" method="POST">
+            <form class="mt-8 space-y-6" action="#" method="POST"> {% csrf_token %}
                 <input type="hidden" name="remember" value="true">
                 <div class="rounded-md shadow-sm -space-y-px">
                     <div>
